--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <h1 align="center">Una adivinanza para empezar el día!</h1>
-	<h3 align="center">que tengas un excelente día</h3>
+	<h3 align="center">Una adivinanza para empezar el día!</h3>
 	
 	
 <script src="./assets/js/DesafioClase3.js"></script>	
