--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
 </head>
 
 <body>
-<h1 align="center">Una adivinanza para empezar el día!</h1>
-	<h3 align="center">Una adivinanza para empezar el día!</h3>
+	<div class="flex-container">
+		<div class="left"></div>
+		<div class="middle">
+			<h1 align="center">Cotiza tu servicio !</h1>
+				<h3 >Sesiones</h3>
+				  <div id ="prod1"></div>
+				 <div id ="prod2"></div>
+				 <div id ="prod3"></div>
+				<h3>Adicionales</h3>
+				  <div id ="ad1"></div>
+				 <div id ="ad2"></div>
+				 <div id ="ad3"></div>
+		</div>
+
+  <div class="right"></div>
+</div>
 	
-	
-<script src="./assets/js/DesafioClase3.js"></script>	
+<script src="./assets/js/simuladorInteractivo.js"></script>	
 </body>
 
 </html>
