--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 	<div class="container-fluid">
 		
 		  <div class="row">
-    		<div class="col-1">
-			  </div>
-			  <div class="col-4">
+    	
+			  <div class="col-sm-12 col-md-4 ms-4 pb-4">
 			<h1 align="center">Cotiza tu servicio !</h1>
 				<h3 >Sesiones</h3>
 				  <div id ="prod1"></div>
@@ -58,7 +57,7 @@
 				 <div id ="ad3"></div>
 			</div>
 		
-  			<div class="col-7"></div>
+  			<div class="col-sm-12 col-md-8"></div>
 		</div>
 </div>	
 <script src="./assets/js/simuladorInteractivo.js"></script>	
