--- a/pages/arrays.html
+++ b/pages/arrays.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	﻿<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<link rel="stylesheet" href="./assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/main.css">
     <title>Cotizador Sesiones de Fotos - Javascript</title>
     
 </head>
@@ -13,29 +13,29 @@
 <body>
 	<nav class="navbar navbar-expand-md fixed-top bg-light">
   <div class="container-fluid">
-   <a class="navbar-brand" href= "./index.html" ><img src="assets/images/js.png" class="fluid">Entregas JS</a>
+   <a class="navbar-brand" href= "../index.html" ><img src="../assets/images/js.png" class="fluid">Entregas JS</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
         </li>
 		   <li class="nav-item">
-          <a class="nav-link" href="./pages/arrays.html">D Arrays</a>
+          <a class="nav-link" href="./soon.html">D Arrays</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/soon.html">PF 1era entrega</a>
+          <a class="nav-link" href="./soon.html">PF 1era entrega</a>
         </li>
 		 <li class="nav-item">
-          <a class="nav-link" href="./pages/soon.html">D HTML</a>
+          <a class="nav-link" href="./soon.html">D HTML</a>
         </li>
 		 <li class="nav-item">
-          <a class="nav-link" href="./pages/soon.html">D Eventos</a>
+          <a class="nav-link" href="./soon.html">D Eventos</a>
         </li>
 		   <li class="nav-item">
-          <a class="nav-link" href="./pages/soon.html">PF Segunda Entrega</a>
+          <a class="nav-link" href="./soon.html">PF Segunda Entrega</a>
         </li>
       </ul>
     </div>
@@ -48,19 +48,19 @@
 			  <div class="col-sm-12 col-md-4 ms-4 me-4 pb-4">
 			<h1 align="center">Cotiza tu servicio !</h1>
 				<h3 >Sesiones</h3>
-				  <div id ="prod1"></div>
-				 <div id ="prod2"></div>
-				 <div id ="prod3"></div>
+				  <div id ="produ1"></div>
+				 <div id ="produ2"></div>
+				 <div id ="produ3"></div>
 				<h3>Adicionales</h3>
-				  <div id ="ad1"></div>
-				 <div id ="ad2"></div>
-				 <div id ="ad3"></div>
+				  <div id ="adi1"></div>
+				 <div id ="adi2"></div>
+				 <div id ="adi3"></div>
 			</div>
 		
   			<div class="col-sm-12 col-md-8"></div>
 		</div>
 </div>	
-<script src="./assets/js/simuladorInteractivo.js"></script>	
+<script src="../assets/js/arrays.js"></script>	
 </body>
 
 </html>
