--- a/pages/pf1.html
+++ b/pages/pf1.html
@@ -10,7 +10,7 @@
     
 </head>
 
-<body>
+<body class="pf1">
 	<nav class="navbar navbar-expand-md fixed-top bg-light">
   <div class="container-fluid">
    <a class="navbar-brand" href= "../index.html" ><img src="../assets/images/js.png" class="fluid">Entregas JS</a>
@@ -60,7 +60,7 @@
   			<div class="col-sm-12 col-md-8"></div>
 		</div>
 </div>	
-<script src="../assets/js/arrays.js"></script>	
+<script src="../assets/js/pf1.js"></script>	
 </body>
 
 </html>
