--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href="./pages/arrays.html">D Arrays</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/soon.html">PF 1era entrega</a>
+          <a class="nav-link" href="./pages/pf1.html">PF 1era entrega</a>
         </li>
 		 <li class="nav-item">
           <a class="nav-link" href="./pages/soon.html">D HTML</a>
