--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <a class="nav-link" href="./pages/soon.html">D HTML</a>
         </li>
 		 <li class="nav-item">
-          <a class="nav-link" href="./pages/soon.html">D Eventos</a>
+          <a class="nav-link" href="./pages/DEventos.html">D Eventos</a>
         </li>
 		   <li class="nav-item">
-          <a class="nav-link" href="./pages/soon.html">PF Segunda Entrega</a>
+          <a class="nav-link" href="./pages/pf2.html">PF Segunda Entrega</a>
         </li>
       </ul>
     </div>
