--- a/pages/arrays.html
+++ b/pages/arrays.html
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          <a class="nav-link" aria-current="page" href="../index.html">Home</a>
         </li>
-		   <li class="nav-item">
-          <a class="nav-link" href="./soon.html">D Arrays</a>
+		   <li class="nav-item  active">
+          <a class="nav-link" href="./arrays.html">D Arrays</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./pf1.html">PF 1era entrega</a>
