--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
 		   <li class="nav-item">
           <a class="nav-link" href="./pages/pf2.html">PF Segunda Entrega</a>
         </li>
+		   </li>
+		   <li class="nav-item">
+          <a class="nav-link" href="./pages/DLibrerias.html">D Librerias</a>
+        </li>
+		 </li>
+		   <li class="nav-item">
+          <a class="nav-link" href="./pages/DAjax.html">D AJAX</a>
+        </li>
+	   </li>
+		   <li class="nav-item">
+          <a class="nav-link" href="./pages/pf.html">Proyecto Final</a>
+        </li>
       </ul>
     </div>
   </div>
