--- a/pages/pf1.html
+++ b/pages/pf1.html
@@ -37,6 +37,17 @@
 		   <li class="nav-item">
           <a class="nav-link" href="./pf2.html">PF Segunda Entrega</a>
         </li>
+		    <li class="nav-item">
+          <a class="nav-link" href="./DLibrerias.html">D Librerias</a>
+        </li>
+		 </li>
+		   <li class="nav-item">
+          <a class="nav-link" href="./DAjax.html">D AJAX</a>
+        </li>
+	   </li>
+		   <li class="nav-item">
+          <a class="nav-link" href="./pf.html">Proyecto Final</a>
+        </li>
       </ul>
     </div>
   </div>
