--- a/pages/arrays.html
+++ b/pages/arrays.html
@@ -32,10 +32,21 @@
           <a class="nav-link" href="./soon.html">D HTML</a>
         </li>
 		 <li class="nav-item">
-          <a class="nav-link" href="./soon.html">D Eventos</a>
+          <a class="nav-link" href="./DEventos.html">D Eventos</a>
         </li>
 		   <li class="nav-item">
-          <a class="nav-link" href="./soon.html">PF Segunda Entrega</a>
+          <a class="nav-link" href="./pf2.html">PF Segunda Entrega</a>
+        </li>
+		 <li class="nav-item">
+          <a class="nav-link" href="./DLibrerias.html">D Librerias</a>
+        </li>
+		 </li>
+		   <li class="nav-item">
+          <a class="nav-link" href="./DAjax.html">D AJAX</a>
+        </li>
+	   </li>
+		   <li class="nav-item">
+          <a class="nav-link" href="./pf.html">Proyecto Final</a>
         </li>
       </ul>
     </div>
