--- a/pages/DLibrerias.html
+++ b/pages/DLibrerias.html
@@ -81,13 +81,13 @@
 				  </form>
 				</div>
 			 </div>
-				<div class=" card col-sm-12 col-md-3 ">
-					<h3 align="center" class="display-3 pt-4 mt-4">Tus cotizaciones:</h3>
+				<div class=" card col-sm-12 col-md-3 p-4">
+					<h3 align="center" class="display-3 pt-4 ">Tus cotizaciones:</h3>
 				<div id="quoteContainer"></div>
 					</div>
 			  	</div>
 			  <div class="row p-4">
-				  <div class="col-sm-12 col-md-6 ps-1 pe-1">
+				  <div class="col-sm-12 col-md-6 p-4">
 				<div class="card p-4 text-opacity-50">
 					<h3 >Sesiones</h3>
 					  <div id ="produ1"></div>
@@ -98,9 +98,8 @@
 					 <div id ="adi2"></div>
 					 <div id ="adi3"></div>
 		
-					  </div></div>
-		
-  			<div class="col-sm-12 col-md-4"></div>
+					  </div>
+				  </div>
 		</div>
 </div>	
 <!-- JavaScript Bundle with Popper -->
