--- a/pages/pf1.html
+++ b/pages/pf1.html
@@ -40,11 +40,9 @@
 		    <li class="nav-item">
           <a class="nav-link" href="./DLibrerias.html">D Librerias</a>
         </li>
-		 </li>
-		   <li class="nav-item">
-          <a class="nav-link" href="./DAjax.html">D AJAX</a>
+		    <li class="nav-item">
+          <a class="nav-link" href="./DFetch.html">D FETCH</a>
         </li>
-	   </li>
 		   <li class="nav-item">
           <a class="nav-link" href="./pf.html">Proyecto Final</a>
         </li>
