--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
 		 </li>
 		   <li class="nav-item">
-          <a class="nav-link" href="./pages/DAjax.html">D AJAX</a>
+          <a class="nav-link" href="./pages/DFetch.html">D FETCH</a>
         </li>
 	   </li>
 		   <li class="nav-item">
