--- a/pages/DEventos.html
+++ b/pages/DEventos.html
@@ -34,6 +34,9 @@
 		 <li class="nav-item">
           <a class="nav-link active" href="./DEventos.html">D Eventos</a>
         </li>
+		     <li class="nav-item">
+          <a class="nav-link" href="./DFetch.html">D FETCH</a>
+        </li>
 		   <li class="nav-item">
           <a class="nav-link" href="./pf2.html">PF Segunda Entrega</a>
         </li>
@@ -84,7 +87,7 @@
   			<div class="col-sm-12 col-md-4"></div>
 		</div>
 </div>	
-<script src="../assets/js/dEventos.js"></script>	
+<script src="../assets/js/DFetch.js"></script>	
 </body>
 
 </html>
