--- a/pages/DFetch.html
+++ b/pages/DFetch.html
@@ -38,11 +38,11 @@
           <a class="nav-link" href="./pf2.html">PF Segunda Entrega</a>
         </li>
 		 <li class="nav-item">
-          <a class="nav-link  active" href="./DLibrerias.html">D Librerias</a>
+          <a class="nav-link" href="./DLibrerias.html">D Librerias</a>
         </li>
 		 </li>
 		   <li class="nav-item">
-          <a class="nav-link" href="./DAjax.html">D AJAX</a>
+          <a class="nav-link active" href="./DFetch.html">D Fetch</a>
         </li>
 	   </li>
 		   <li class="nav-item">
@@ -104,7 +104,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="../assets/js/dFetch.js"></script>	
+<script src="../assets/js/DFetch.js"></script>	
 </body>
 
 </html>
