--- a/pages/DLibrerias.html
+++ b/pages/DLibrerias.html
@@ -42,7 +42,7 @@
         </li>
 		 </li>
 		   <li class="nav-item">
-          <a class="nav-link" href="./DAjax.html">D AJAX</a>
+          <a class="nav-link" href="./DFetch.html">D FETCH</a>
         </li>
 	   </li>
 		   <li class="nav-item">
