--- a/pages/pf2.html
+++ b/pages/pf2.html
@@ -41,8 +41,8 @@
           <a class="nav-link" href="./DLibrerias.html">D Librerias</a>
         </li>
 		 </li>
-		   <li class="nav-item">
-          <a class="nav-link" href="./DAjax.html">D AJAX</a>
+		     <li class="nav-item">
+          <a class="nav-link" href="./DFetch.html">D FETCH</a>
         </li>
 	   </li>
 		   <li class="nav-item">
